; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_sdgecko_io.c___card_softreset.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_sdgecko_io.c___card_softreset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_DRIVE = common dso_local global i64 0, align 8
@CARDIO_ERROR_NOCARD = common dso_local global i64 0, align 8
@_ioResponse = common dso_local global i32** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @__card_softreset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @__card_softreset(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = icmp slt i64 %5, 0
  br i1 %6, label %11, label %7

7:                                                ; preds = %1
  %8 = load i64, i64* %3, align 8
  %9 = load i64, i64* @MAX_DRIVE, align 8
  %10 = icmp sge i64 %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %7, %1
  %12 = load i64, i64* @CARDIO_ERROR_NOCARD, align 8
  store i64 %12, i64* %2, align 8
  br label %38

13:                                               ; preds = %7
  store i64 0, i64* %4, align 8
  %14 = load i64, i64* %3, align 8
  %15 = call i64 @__card_writecmd0(i64 %14)
  store i64 %15, i64* %4, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %13
  %18 = load i64, i64* %4, align 8
  store i64 %18, i64* %2, align 8
  br label %38

19:                                               ; preds = %13
  %20 = load i64, i64* %3, align 8
  %21 = load i32**, i32*** @_ioResponse, align 8
  %22 = load i64, i64* %3, align 8
  %23 = getelementptr inbounds i32*, i32** %21, i64 %22
  %24 = load i32*, i32** %23, align 8
  %25 = call i64 @__card_readresponse(i64 %20, i32* %24, i32 1)
  store i64 %25, i64* %4, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %19
  %28 = load i64, i64* %4, align 8
  store i64 %28, i64* %2, align 8
  br label %38

29:                                               ; preds = %19
  %30 = load i64, i64* %3, align 8
  %31 = load i32**, i32*** @_ioResponse, align 8
  %32 = load i64, i64* %3, align 8
  %33 = getelementptr inbounds i32*, i32** %31, i64 %32
  %34 = load i32*, i32** %33, align 8
  %35 = getelementptr inbounds i32, i32* %34, i64 0
  %36 = load i32, i32* %35, align 4
  %37 = call i64 @__check_response(i64 %30, i32 %36)
  store i64 %37, i64* %2, align 8
  br label %38

38:                                               ; preds = %29, %27, %17, %11
  %39 = load i64, i64* %2, align 8
  ret i64 %39
}

declare dso_local i64 @__card_writecmd0(i64) #1

declare dso_local i64 @__card_readresponse(i64, i32*, i32) #1

declare dso_local i64 @__check_response(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
